--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -7,8 +7,8 @@
         xmlns:controls="clr-namespace:UI.Controls"
         xmlns:viewModels="clr-namespace:UI.ViewModels"
         xmlns:infra="clr-namespace:UI.Infrastructure"
-        mc:Ignorable="d"
-        Title="MainWindow" MinHeight="600" MinWidth="800"
+        mc:Ignorable="d" Icon="Resources/Images/logo_64.png"
+        Title="TechNetwork" MinHeight="600" MinWidth="800"
         d:DesignHeight="1024" d:DesignWidth="1280">
     <Window.DataContext>
         <viewModels:AppViewModel/>
@@ -34,8 +34,12 @@
             <ColumnDefinition Width="2*" MinWidth="200"/>
         </Grid.ColumnDefinitions>
         <Border Grid.Column="0" Style="{DynamicResource Placeholder}">
-            <TextBlock Text="Нажмите на правую кнопку мыши" HorizontalAlignment="Center" VerticalAlignment="Center"
-                       Foreground="{StaticResource RadialMenuGray}" FontSize="20" TextAlignment="Center" FontWeight="Bold"/>
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Image Source="Resources/Images/TechNetwork.png" Stretch="None" Opacity="0.8"/>
+                <TextBlock Text="Нажмите на правую кнопку мыши" 
+                           Foreground="{StaticResource RadialMenuGray}" FontSize="20" TextAlignment="Center"
+                           FontWeight="Bold" />
+            </StackPanel>
         </Border>
         <controls:GraphCanvas Grid.Column="0" Grid.Row="0" Graph="{Binding Graph}" Background="Transparent"
                                   VisitedPath="{Binding VisitedPath}"
